# ekeko

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  flake.nix  hello_world.txt  pyproject.toml
ekeko/: __init__.py
ekeko/backtrader/: __init__.py  analyzer.py  benchmark.py  broker.py  cerebro.py  engine.py  evaluator.py  grid_search.py  optimizer.py  order.py  orders.py  report.py  result_analyzer.py  screener.py  sizer.py
ekeko/config/: config.py
ekeko/core/: __init__.py  signal_type.py  types.py
ekeko/data_loader/: __init__.py  data_loader.py  data_set.py  logger.py  ticker_loader.py  ticker_processor.py
ekeko/dataloader/: __init__.py  stooq_loader.py
ekeko/fun/: quotes.py
ekeko/plotting/: __init__.py  plot_builder.py  plotting.py
ekeko/viz/: __init__.py  plotting.py
examples/: debug_cached.py  issue_relative.py  janus.py  janus_strategy.py  load_all_nasadq.py  load_example.py  param_opt.py  performance_metrics.py  v0_1.py
src/ekeko/: __init__.py
src/ekeko/backtrader/: cerebro.py  screener.py
src/ekeko/viz/: __init__.py
tests/: backtrader_end_to_end.py  backtrader_test.py  data_loader_test.py  plotting_end_to_end.py  plotting_test.py  screener_test.py  stooq_data_loader_end_to_end.py  test_engine.py  test_engine_with_missing_dates.py  test_engine_with_no_entry.py  test_position_and_trades_and_account.py  test_short_engine.py
tests/data_loader_test_data/nasadq/: aapl.us.txt  gps.us.txt
wheels/: ekeko-0.1.0-py3-none-any.whl
