[tool.poetry]
name = "ekeko"
version = "0.1.0"
description = ""
authors = ["Nacho114 <17376073+Nacho114@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "ekeko" },
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"
plotly = "^5.15.0"
backtrader = "^1.9.78.123"
yfinance = "^0.2.40"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
