[tool.poetry]
name = "ekeko"
version = "0.1.3"
description = "Proprietary trading platform of the Aurora fund"
authors = ["Nacho114 <17376073+Nacho114@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.2"
plotly = "^5.15.0"
yfinance = "^0.2.48"
tqdm = "^4.66.5"
multiprocess = "^0.70.16"
cowsay = "^6.1"
joblib = "^1.4.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
